[package]
name = "rsdiff"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
byteorder = "1.4.3"
colored = "2.0.0"

[dependencies.flate2]
version = "1.0.20"
features = ["zlib-ng-compat"]

[dependencies.nifti]
version = "0.14"
features = ["ndarray_volumes"]
